check username if available

--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,7 @@ Register
             <input type="text" name="username" id="username" placeholder="Enter your username"
                 class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full" autocomplete="off">
             <p id="displayUserNameError" class="hidden text-red-400"></p>
+            <p id="displayUserNameSuccess" class="hidden text-green-400"></p>
         </div>
         <div>
             <label for="password" class="block text-slate-500">Password</label>
