--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@ Register
                 class="bg-slate-200 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 outline-none p-2 w-full">
                 <img id="passwordEyeImage" src="../assets/icons/eye_open.svg" alt="closed eye icon" onclick="toggleVisibility('password')" class="hover:cursor-pointer absolute top-0 right-0 m-2">
             </p>
-            <p id="displayError" class="hidden"></p>
+            <p id="displayError" class="hidden text-red-400"></p>
         </div>
         <div>
             <label for="confirm_password" class="block text-slate-500">Confirm Password</label>
