--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/output.css">
     <link rel="shortcut icon" href="../assets/icons/favicon.svg" type="image/x-icon">
 
     <title>Stock Portfolio Manager: {% block title %}{% endblock %}</title>
@@ -20,16 +20,19 @@
                 <img src="../assets/icons/favicon.svg" alt="logo" class="w-8 h-12 md:w-12 md:h-16">
                 <p class="text-white text-lg sm:text-xl">Stock Portfolio Manager</p>
             </a>
-            <a href="/quote" class="text-slate-200">Quote</a>
-            <a href="/sell" class="text-slate-200">Sell</a>
-            <a href="/buy" class="text-slate-200">Buy</a>
-            <a href="/history" class="text-slate-200">History</a>
-            <div class="flex gap-4 text-white items-center">
-                <a href="/profile" class="flex items-center">
+            <a href="/quote" class="text-slate-200 hidden sm:inline">Quote</a>
+            <a href="/sell" class="text-slate-200 hidden sm:inline">Sell</a>
+            <a href="/buy" class="text-slate-200 hidden sm:inline">Buy</a>
+            <a href="/history" class="text-slate-200 hidden sm:inline">History</a>
+            <div class="items-center gap-4 text-white items-cente hidden sm:flex">
+                <a href="/profile" class="flex items-center inline">
                     <img src="../assets/icons/user.svg" alt="user">
                     <p>Edit Profile</p>
                 </a>
-                <a href="/logout">Log Out</a>
+                <a href="/logout" class="inline">Log Out</a>
+            </div>
+            <div class="sm:hidden">
+                <img src="../assets/icons/hamburger.svg" alt="menu">
             </div>
             <script src="../assets/js/layout.js">
             </script>
