--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../assets/css/output.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="shortcut icon" href="../assets/icons/favicon.svg" type="image/x-icon">
 
     <title>Stock Portfolio Manager: {% block title %}{% endblock %}</title>
@@ -15,24 +15,26 @@
 <body class="min-h-screen relative bg-white text-slate-800">
     <nav class="bg-black p-2">
         {% if session["user_id"] %}
-        <div class="flex justify-around items-center w-full">
+        <div class="flex justify-between items-center w-full relative md:justify-around">
             <a href="/" class="flex flex-wrap items-center overflow-auto">
                 <img src="../assets/icons/favicon.svg" alt="logo" class="w-8 h-12 md:w-12 md:h-16">
                 <p class="text-white text-lg sm:text-xl">Stock Portfolio Manager</p>
             </a>
-            <a href="/quote" class="text-slate-200 hidden sm:inline">Quote</a>
-            <a href="/sell" class="text-slate-200 hidden sm:inline">Sell</a>
-            <a href="/buy" class="text-slate-200 hidden sm:inline">Buy</a>
-            <a href="/history" class="text-slate-200 hidden sm:inline">History</a>
-            <div class="items-center gap-4 text-white items-cente hidden sm:flex">
-                <a href="/profile" class="flex items-center inline">
+            <a href="/quote" id="quote" class="text-slate-200 hidden p-2 px-4 rounded-lg md:inline hover:bg-gray-800">Quote</a>
+            <a href="/sell" id="sell" class="text-slate-200 hidden p-2 px-4 rounded-lg md:inline hover:bg-gray-800">Sell</a>
+            <a href="/buy" id="buy" class="text-slate-200 hidden p-2 px-4 rounded-lg md:inline hover:bg-gray-800">Buy</a>
+            <a href="/history" id="history" class="text-slate-200 hidden p-2 px-4 rounded-lg md:inline hover:bg-gray-800">History</a>
+            <div id="profile" class="text-white hidden md:flex md:items-center md:gap-4">
+                <a href="/profile" class="flex items-center p-2 px-4 rounded-lg hover:bg-gray-800">
                     <img src="../assets/icons/user.svg" alt="user">
                     <p>Edit Profile</p>
                 </a>
-                <a href="/logout" class="inline">Log Out</a>
+                <a href="/logout" class="inline p-2 px-4 rounded-lg hover:bg-gray-800">Log Out</a>
             </div>
-            <div class="sm:hidden">
-                <img src="../assets/icons/hamburger.svg" alt="menu">
+            <div class="relative md:hidden hover:cursor-pointer">
+                <div id="hamburgerMenu" class="flex flex-col right-0">
+                    <img id="hamburgerImage" src="../assets/icons/hamburger.svg" alt="menu" onclick="showMenu()">
+                </div>
             </div>
             <script src="../assets/js/layout.js">
             </script>
